오류로 인한 프로젝트 재생성

--- a/LOGOS/LOGOS.vcxproj
+++ b/LOGOS/LOGOS.vcxproj
@@ -19,8 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{CF85BCC1-374A-4371-ACBE-D66EFA29A18C}</ProjectGuid>
-    <Keyword>Win32Proj</Keyword>
+    <ProjectGuid>{A0098A2D-D0D7-4D9F-B969-0A4DC18B214F}</ProjectGuid>
     <RootNamespace>LOGOS</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -29,27 +28,27 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -69,123 +68,58 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LinkIncremental>true</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <LinkIncremental>true</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LinkIncremental>false</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LinkIncremental>false</LinkIncremental>
-  </PropertyGroup>
+  <PropertyGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
-    <Link>
-      <SubSystem>Windows</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
-    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
-    <Link>
-      <SubSystem>Windows</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
-    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\ConsoleApplication1\DetectHandler.h" />
-    <ClInclude Include="..\ConsoleApplication1\FaceDetector.h" />
-    <ClInclude Include="..\ConsoleApplication1\HandDetector.h" />
-    <ClInclude Include="..\ConsoleApplication1\NoiseCanceler.h" />
-    <ClInclude Include="..\ConsoleApplication1\RecordMotion.h" />
-    <ClInclude Include="Controller.h" />
-    <ClInclude Include="CursorController.h" />
-    <ClInclude Include="CursorMotion.h" />
-    <ClInclude Include="DetectExp.h" />
-    <ClInclude Include="Frame.h" />
-    <ClInclude Include="GestureExp.h" />
-    <ClInclude Include="LoadingExp.h" />
-    <ClInclude Include="Main.h" />
-    <ClInclude Include="MatchingExp.h" />
-    <ClInclude Include="Motion.h" />
-    <ClInclude Include="PPTController.h" />
-    <ClInclude Include="PPTMotion.h" />
-    <ClInclude Include="RecordController.h" />
-    <ClInclude Include="RecordExp.h" />
+    <ClInclude Include="DetectHandler.h" />
+    <ClInclude Include="FaceDetector.h" />
+    <ClInclude Include="HandDetector.h" />
+    <ClInclude Include="NoiseCanceler.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\ConsoleApplication1\DetectHandler.cpp" />
-    <ClCompile Include="..\ConsoleApplication1\FaceDetector.cpp" />
-    <ClCompile Include="..\ConsoleApplication1\HandDetector.cpp" />
-    <ClCompile Include="..\ConsoleApplication1\NoiseCanceler.cpp" />
-    <ClCompile Include="..\ConsoleApplication1\RecordMotion.cpp" />
-    <ClCompile Include="Controller.cpp" />
-    <ClCompile Include="CursorController.cpp" />
-    <ClCompile Include="CursorMotion.cpp" />
-    <ClCompile Include="DetectExp.cpp" />
-    <ClCompile Include="Frame.cpp" />
-    <ClCompile Include="GestureExp.cpp" />
-    <ClCompile Include="LoadingExp.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="MatchingExp.cpp" />
-    <ClCompile Include="Motion.cpp" />
-    <ClCompile Include="PPTController.cpp" />
-    <ClCompile Include="PPTMotion.cpp" />
-    <ClCompile Include="RecordController.cpp" />
-    <ClCompile Include="RecordExp.cpp" />
+    <ClCompile Include="DetectHandler.cpp" />
+    <ClCompile Include="FaceDetector.cpp" />
+    <ClCompile Include="HandDetector.cpp" />
+    <ClCompile Include="NoiseCanceler.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
