--- a/PreHands_PPTF5_Effect/PreHands/PreHands/PreHands.csproj
+++ b/PreHands_PPTF5_Effect/PreHands/PreHands/PreHands.csproj
@@ -72,12 +72,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Record\ColorRecorder.cs" />
-    <Compile Include="Record\DepthRecorder.cs" />
-    <Compile Include="Record\KinectRecorder.cs" />
-    <Compile Include="Record\KinectRecordOptions.cs" />
-    <Compile Include="Record\ReplaySkeletonData.cs" />
-    <Compile Include="Record\SkeletonRecorder.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SettingsControl.xaml.cs">
       <DependentUpon>SettingsControl.xaml</DependentUpon>
@@ -95,9 +89,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CursorEvent.cs" />
-    <Compile Include="eventHandler\Skeleton_eventHandler.cs" />
-    <Compile Include="eventListener\ppt_eventList.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -141,19 +132,13 @@
     <Resource Include="Images\Face.png" />
   </ItemGroup>
   <ItemGroup>
-    <COMReference Include="Microsoft.Office.Core">
-      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
-      <VersionMajor>2</VersionMajor>
-      <VersionMinor>7</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>primary</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Images\Close-icon.png" />
     <Resource Include="Images\Settings-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="eventHandler\" />
+    <Folder Include="eventListener\" />
+    <Folder Include="Record\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
